1.2.8p10:
    Core & Setup:
    * 3843 FIX: Fixed reporting of crashes when using Nagios core

    Checks & Agents:
    * 3743 SEC: mk_jolokia: Use JSON library to parse JSON output in lieu of eval()...
            NOTE: Please refer to the migration notes!
    * 3772 FIX: ipmi_sensors: fixed missing states
    * 3562 FIX: agent_vsphere.pysphere: fixed problems related to ssl certificate validation on older distributions/python versions
    * 3782 FIX: agent_netapp: fixed exception with values containing umlauts
    * 3774 FIX: apc_symmetra: fixed wrong status and values handling
    * 3761 FIX: windows_tasks: Fixed possible exception in discovery in case of unexpected agent data
    * 3762 FIX: local: Fixed long output handling with Microcore...
    * 3764 FIX: netapp_api_vs_traffic: Fixed exception when no NFSv4 infos available
    * 3765 FIX: oracle_asm_diskgroup: Made check more robust against invalid data received from agent...
    * 3766 FIX: palo_alto_sessions: Fixed possible division by zero error
    * 3768 FIX: quantum_libsmall_door: Fixed possible exception in scan function
    * 3769 FIX: cisco_temperature: Fixed exception in case of empty SNMP data received from device
    * 3770 FIX: win_dhcp_pools: Fixed crash in case of empty DHCP pools
    * 3781 FIX: ipmi: made check more robust against incomplete datasets

    Multisite:
    * 3561 FIX: Removing a comment now also removes any linked acknowledgements...
    * 3779 FIX: availability: added validation of availability options
    * 3767 FIX: Fixed possible UnicodeDecodeError when having users with umlauts in the user ID

    WATO:
    * 3559 WATO API: now able to bake agents with the new action "bake_agents"

    Event Console:
    * 3771 FIX: Fixed exception on edit rule page in case of special URLs


1.2.8p9:
    Checks & Agents:
    * 3759 FIX: cpu.loads: Fixed possible crash on missing data
    * 3715 FIX: agent_ipmi_sensors: fixed error handling

    Multisite: