@@ -1,6 +1,7 @@
 1.2.8p10:
     Core & Setup:
     * 3843 FIX: Fixed reporting of crashes when using Nagios core
+    * 3846 FIX: Nagios: define_contactgroups = False is handled correctly again
 
     Checks & Agents:
     * 3743 SEC: mk_jolokia: Use JSON library to parse JSON output in lieu of eval()...
